--- a/style-guide.css
+++ b/style-guide.css
@@ -10,7 +10,7 @@
   font-family: "Roboto", sans-serif;
 }
 
-/*Variables*/
+/*Variables - colour scheme not yet selected */
 :root {
   --h-colour: #000000;
   --p-colour: #171717;
